name:                caldwell-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/erlandsona/caldwell-api#readme
license:             MIT
license-file:        LICENSE
author:              Austin Erlandson
maintainer:          austin@erlandson.com
copyright:           2017 Austin Erlandson
category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
    setup-depends:    base >= 3.7 && < 5
                    , Cabal
                    , process

library
  hs-source-dirs:      app
  exposed-modules:     Lib
                     , Models
  ghc-options:       -Wall -Werror -ddump-deriv
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , elm-export
                     , elm-export-persistent
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant-elm
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-cors
                     , wai-extra
                     -- , warp
  default-language:    Haskell2010

executable caldwell-api-exe
  hs-source-dirs:      app
  main-is:             Server/Main.hs
  other-modules:       Lib
                     , Models
                     , Server.Configuration
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     -- Source
                     , caldwell-api
                     -- 3rd Party
                     -- , aeson
                     , bytestring
                     , elm-export
                     , elm-export-persistent
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , safe
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable caldwell-elm
  hs-source-dirs:      app
  main-is:             Generators/Main.hs
  other-modules:       Lib
                     , Models
                     , Generators.Elm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror  
  build-depends:       base >= 4.7 && < 5
                     , caldwell-api
                     , elm-export
                     , elm-export-persistent
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant-elm
                     , servant-server
                     , text
                     , time
  default-language:    Haskell2010

test-suite caldwell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , caldwell-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erlandsona/caldwell-api
