name:                caldwell-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/erlandsona/caldwell-servant#readme
license:             MIT
license-file:        LICENSE
author:              Austin Erlandson
maintainer:          austin@erlandson.com
copyright:           2017 Austin Erlandson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable caldwell-servant
  hs-source-dirs:      app
  main-is:             Server/Main.hs
  other-modules:       Server.Config
                     , Lib
                     , Models
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     -- Source
                     -- , caldwell-servant
                     -- 3rd Party
                     , aeson
                     , bytestring
                     , elm-export
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , safe
                     , servant-elm
                     , servant-server
                     , time
                     , transformers
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
  default-language:    Haskell2010

test-suite caldwell-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , caldwell-servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erlandsona/caldwell-servant
